feat: 增加update接口模板并生成代码，新增日志库封装
